# brainfuck-ext--cell-gen-and-devs

./: .gitignore  Cargo.toml  README.md
examples/compile_test/macro_and_sss/: 01_err.bf-ext  02_ok.bf-ext  03_ok.bf-ext  04_err.bf-ext  05_err.bf-ext  06_err.bf-ext  07_ok.bf-ext  08_err.bf-ext  09_err.bf-ext  10_err.bf-ext
examples/compile_test/must_error/: while_error_01.bf-ext
examples/compile_test/must_success/: disasm_by_compiler_test_u8_std_cmd_01.disasm  opcode_std_cmd_01.bf-ext  while_ok_01.bf-ext
examples/examples/: 02_write_const_str_in_win.bf-ext  03_win_print_alphabet.bf-ext  helwo_demv_wowld.bf-ext
examples/i_use_arch_btw/: hello_world.bf-ext  include.bf-ext  reverse.bf-ext
examples/issue/15/: 00_temp.bf-ext  00_temp_A.bf-ext  00_temp_B.bf-ext
examples/micro/: check_num_console.bf-ext
examples/proof_of_sugarity_some_cmds/: proof_div.bf-ext  proof_mul.bf-ext  proof_test_zero.bf-ext  proof_zeroed_cell.bf-ext  std_proof_macros.bf-ext
specifications/: bad_way__opcodes.md  bf_ext_spec.md  cpu_std_ru.md  cpu_swap_opcodes_ru.md  std_cpu_opcodes_en.md
specifications/device/: cem_ru.md  std_dev_ru.md
src/: example_run.rs  lib.rs  main.rs
src/bfcg/: mod.rs
src/bfcg/compiler/: cmd_compiler.rs  compiler.rs  compiler_error.rs  compiler_info.rs  compiler_inter_info.rs  compiler_option.rs  compiler_pos.rs  compiler_warning.rs  mem_init.rs  mod.rs  valid_cmd.rs
src/bfcg/dev_emulators/: cem.rs  dev.rs  dev_constructor.rs  dev_name.rs  mod.rs  std_dev.rs  win.rs
src/bfcg/disasm/: mod.rs  (+1 more)
tests/: compiler_test.rs  console_examples.rs  sugarity.rs
(+59 files in other folders)
