[package]
name = "bf_cell_gen"

# cause ~80% done  
version = "0.8.0" 

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
glium = "0.31.0"
boolvec = "0.2.6"
clap = { version = "3.0.14", features = ["derive"] }
